--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,9 @@
     <title>React Clock!</title>
   </head>
   <body>
-    <script type="text/javascript" src="bundle.js"></script>
+    <div id="app"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.13/moment-timezone-with-data.min.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
