--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
     <meta charset="utf-8">
     <title>React Clock!</title>
   </head>
